# pressure-inflammation

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
Data/: data.json
Models/: M0.txt  M1.txt  M1_2.txt  M2.txt  M3.txt  M3_2.txt  M3_3.txt  M3_4.txt  M4.txt  M4_1.txt  M4_2.txt  M5.txt  M5_2.txt  M5_3.txt  M5_4.txt  M5_5.txt  M5_6.txt  M5_7.txt  M6_4.txt  M6_5.txt  M6_6.txt  M6_7.txt  M6_8.txt  Models.drawio
Results/M4_2/: cost=28.31424375784891.json
Results/M5/: cost=25.2070765169694.json
Results/M5_2/: cost=25.19878630440746.json
Results/M5_3/: cost=124.46156961144013.json
Results/M5_4/: cost=134.640430170731.json
Results/M5_5/: cost=134.5458428610369.json
Results/M5_7/: cost=123.22264645308888.json
Results/M6_5/: cost=123.5319578028675.json
Results/M6_6/: cost=111.91926272071072.json
Results/M6_8/: cost=122.1332105233603.json
Results_PI/M6_8/: M6_8-k10a-(0.3035817663604554)-20250117-115742.json  M6_8-k10a-(0.3035817663604554)-20250117-115900.json  M6_8-k10a-(0.3035823462137368)-20250116-222018.json  M6_8-k10a-(0.3035823462137368)-20250116-224642.json  M6_8-k10a-(0.3035823462137368)-20250116-224644.json  M6_8-k10a-(0.30359568008103166)-20250116-221941.json  M6_8-k10a-(0.3036100893536172)-20250116-215851.json  M6_8-k10a-(0.3036100893536172)-20250116-221901.json  M6_8-k10a-initial-(9.283902e-01).json  M6_8-k10a_b-(0.020152820855128123)-20250117-115910.json  M6_8-k10a_b-(0.020156857009403333)-20250116-221928.json  M6_8-k10a_b-(0.020156857009403333)-20250116-224302.json  (+353 more)
functions/: optimization.py  plot_data.py  plotting.py  utils.py
